--- a/package.json
+++ b/package.json
@@ -1,19 +1,39 @@
 {
-  "name": "totu-public",
+  "name": "totu",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
+  "description": "totu",
+  "author": "Krzysztof Orkisz",
+  "keywords": [
+    "gatsby"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "develop": "gatsby develop",
+    "start": "gatsby develop",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "typecheck": "tsc --noEmit"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/orkisz/totu-public.git"
+  "dependencies": {
+    "gatsby": "^4.18.0",
+    "gatsby-plugin-google-analytics": "^4.18.0",
+    "gatsby-plugin-image": "^2.18.0",
+    "gatsby-plugin-manifest": "^4.18.0",
+    "gatsby-plugin-react-helmet": "^5.18.0",
+    "gatsby-plugin-sass": "^5.18.0",
+    "gatsby-plugin-sharp": "^4.18.0",
+    "gatsby-source-filesystem": "^4.18.0",
+    "gatsby-transformer-sharp": "^4.18.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "sass": "^1.53.0"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/orkisz/totu-public/issues"
-  },
-  "homepage": "https://github.com/orkisz/totu-public#readme"
+  "devDependencies": {
+    "@types/node": "^17.0.45",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "typescript": "^4.7.4"
+  }
 }
