--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^4.18.0",
     "gatsby-plugin-google-analytics": "^4.18.0",
     "gatsby-plugin-image": "^2.18.0",
+    "gatsby-plugin-layout": "^3.18.0",
     "gatsby-plugin-manifest": "^4.18.0",
     "gatsby-plugin-react-helmet": "^5.18.0",
     "gatsby-plugin-sass": "^5.18.0",
