--- a/package.json
+++ b/package.json
@@ -16,20 +16,24 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.7",
     "gatsby": "^4.18.0",
     "gatsby-plugin-google-analytics": "^4.18.0",
     "gatsby-plugin-image": "^2.18.0",
     "gatsby-plugin-layout": "^3.18.0",
     "gatsby-plugin-manifest": "^4.18.0",
+    "gatsby-plugin-postcss": "^5.18.0",
     "gatsby-plugin-react-helmet": "^5.18.0",
     "gatsby-plugin-sass": "^5.18.0",
     "gatsby-plugin-sharp": "^4.18.0",
     "gatsby-source-filesystem": "^4.18.0",
     "gatsby-transformer-sharp": "^4.18.0",
+    "postcss": "^8.4.14",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "tailwindcss": "^3.1.6"
   },
   "devDependencies": {
     "@types/node": "^17.0.45",
