--- a/package.json
+++ b/package.json
@@ -25,14 +25,17 @@
     "gatsby-plugin-manifest": "^4.18.0",
     "gatsby-plugin-postcss": "^5.18.0",
     "gatsby-plugin-react-helmet": "^5.18.0",
+    "gatsby-plugin-react-i18next": "^2.0.1",
     "gatsby-plugin-sass": "^5.18.0",
     "gatsby-plugin-sharp": "^4.18.0",
     "gatsby-source-filesystem": "^4.18.0",
     "gatsby-transformer-sharp": "^4.18.0",
+    "i18next": "^21.8.14",
     "postcss": "^8.4.14",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^11.18.1",
     "sass": "^1.53.0",
     "tailwindcss": "^3.1.6"
   },
