--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.7",
+    "classnames": "^2.3.1",
     "gatsby": "^4.18.0",
     "gatsby-plugin-google-analytics": "^4.18.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
